Infrastructure/k8s/Environments/production/deploymen/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: todo-dev
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: todo-server-service
  namespace: todo-dev
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 1555
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo-client-service
  namespace: todo-dev
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 1666
      targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: todo-dev
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim: 
            claimName: postgres-pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: todo-dev
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: todo-server
          image: mahmudsharipov/todoserver:1.31
          resources:
            limits:
              memory: "1Gi"
              cpu: "0.5"
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: todo-dev
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: todo-client
          image: mahmudsharipov/todoclient:1.7
          resources:
            limits:
              memory: "500Mi"
              cpu: "0.5"
          ports:
            - containerPort: 80
            - containerPort: 443
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
  name: todo-server-ingress
  namespace: todo-dev
spec:
  ingressClassName: nginx
  rules:
    - host: mahmud.api.20.219.235.7.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-server-service
                port:
                  number: 1555
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-client-ingress
  namespace: todo-dev
spec:
  ingressClassName: nginx
  rules:
    - host: mahmud.20.219.235.7.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-client-service
                port:
                  number: 1666
